# aria-os

./: .gitignore  .railwayignore  BRIDGE_RESTART_CHECKLIST.md  CLAUDE.md  Dockerfile  FEA_PIPELINE_AUDIT.md  LICENSE  Procfile  README.md  STATUS.md  aria_run_output.txt  assemble.py  assemble_constrain.py  batch.py  cem_aria.py  cem_clock.py  cem_core.py  cem_lre.py  cem_registry.py  cem_to_geometry.py  cosmic-ray-diy-fab.toml  gallery.html  gen_demo_visuals.py  mobile_tunnel.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  requirements_aria_os.txt  run_aria_os.py  run_aria_os_cli.py  run_capture.py  run_dashboard.py  run_direct.py  vercel.json  viewer.html
.learnings/: ERRORS.md  LEARNINGS.md
.scratch/: add_ao_vignette.py  batch_e2e_test.py  darken_backgrounds.py  debug_nozzle.py  enhance_gl_renders.py  fix_framing.py  fix_gallery2.py  fix_impeller_flange.py  fix_nozzle.py  nozzle_angles.py  regen_gallery_renders.py  regen_remaining.py  render_assembly.py  render_assembly_exploded.py  render_assembly_v2.py  render_assembly_v3.py  render_cam_v2.py  render_cam_visual.py  render_civil_v2.py  render_civil_v3.py  render_civil_v4.py  render_dxf_civil.py  render_eng_drawing.py  render_eng_drawing_v2.py  render_eng_drawing_v3.py  render_nozzle_gallery.py  render_pcb.py  render_pcb_pro.py  render_scan_cad_pro.py  render_sloper_pro.py  render_terrain.py  render_terrain2.py  render_terrain3.py  render_terrain_final.py  render_terrain_topo.py  render_terrain_v2.py  render_terrain_v3.py  render_verify_report.py  render_verify_report_v2.py  rerender_sloper.py  (+6 more)
(+616 files in other folders)
