[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-os"
version = "0.1.0"
description = "Natural language to STEP/STL — autonomous engineering pipeline"
readme = "README.md"
requires-python = ">=3.11"

# Core deps — install via pip after cadquery is installed via conda
# See INSTALL.md for full setup instructions
dependencies = [
    "trimesh>=4.5.0,<5.0",
    "ezdxf>=1.3.0,<2.0",
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
# LLM backends (install whichever you use)
llm = [
    "anthropic>=0.86",
    "google-genai>=1.0",
    "groq>=1.0",
]
# Full install
all = [
    "aria-os[llm]",
]

[project.scripts]
aria = "run_aria_os:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aria_os*"]

# ── Known-good pinned versions (use these if you hit dependency conflicts) ──
# cadquery==2.7.0        (install via: conda install -c conda-forge cadquery=2.7.0)
# trimesh==4.11.5
# ezdxf==1.4.3
# numpy==2.4.3
# anthropic==0.86.0
# groq==1.1.2
# matplotlib==3.10.8
# scipy==1.17.1
